hphp/test/slow/reified_generics/return-type-verification-4.php.expectf
Catchable fatal error: Value returned from function f() must be of type C<int>, C<string> given in %s on line 10
